Change name to KinsCoin

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-push-2">
-          <h1 class="text-center">TutorialToken</h1>
+          <h1 class="text-center">KinsCoin</h1>
           <hr/>
           <br/>
         </div>
@@ -35,7 +35,7 @@
             </div>
             <div class="panel-body">
               <h4>Balance</h4>
-              <strong>Balance</strong>: <span id="TTBalance"></span> TT<br/><br/>
+              <strong>Balance</strong>: <span id="TTBalance"></span> KC<br/><br/>
               <h4>Transfer</h4>
               <input type="text" class="form-control" id="TTTransferAddress" placeholder="Address" />
               <input type="text" class="form-control" id="TTTransferAmount" placeholder="Amount" />
